# PyCG

./: .gitignore  format_json.py  pyproject.toml
pycg/: pycg.py
pycg/machinery/: imports.py
pycg/processing/: preprocessor.py
