[project]
name = "PyCG"
version = "0.0.8"
description = "PyCG - Practical Python Call Graphs"
readme = "README.md"
requires-python = ">=3.8"

license = {file = "LICENCE"}
authors = [{name = "Vitalis Salis", email = "vitsalis@gmail.com"}]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "setuptools>=75.3.2",
]

[project.optional-dependencies]
# Development tools: Using Ruff as a fast alternative to flake8/isort
dev = [
    "ruff>=0.1.0",
    "black>=22.12.0",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/vitsalis/PyCG"
"Bug Tracker" = "https://github.com/vitsalis/PyCG/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
preview = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.vscode
  | build
  | dist
  | micro-benchmark
  | micro-benchmark-key-errs
)/
'''

[tool.ruff]
line-length = 88
select = ["E", "F", "I"] 
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.isort]
profile = "black"
